Senior_Project/src/senior/project/test/server/errors/ServerInvalidKeyException.java
package senior.project.test.server.errors;

/**
 *
 * @author Paul Jones
 */
public class ServerInvalidKeyException extends Exception {

  public ServerInvalidKeyException(String msg) {
    super(msg);
  }
}
